# OpenGLES_Android

HelloOpenGLES/: .gitignore  settings.gradle
HelloOpenGLES/app/: build.gradle
HelloOpenGLES/app/src/androidTest/java/com/cgwang1580/helloopengles/: ExampleInstrumentedTest.java
HelloOpenGLES/app/src/main/: AndroidManifest.xml
HelloOpenGLES/app/src/main/cpp/: CMakeLists.txt  native.cpp
HelloOpenGLES/app/src/main/cpp/draw/: draw_utils.cpp  draw_utils.h  shader.txt  shader_content.h
HelloOpenGLES/app/src/main/cpp/header_out/: processor.h
HelloOpenGLES/app/src/main/cpp/shader/: shader_content.h
HelloOpenGLES/app/src/main/cpp/source/: processor.cpp  processor_inner.h
HelloOpenGLES/app/src/main/cpp/utils/: LogAndroid.h  OpenImageHelper.h
HelloOpenGLES/app/src/main/java/com/cgwang1580/Permission/: PermissionHelper.java  PermissionInterface.java
HelloOpenGLES/app/src/main/java/com/cgwang1580/helloopengles/: MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java  MyLog.java
HelloOpenGLES/app/src/main/java/com/cgwang1580/utils/: CommonDefine.java
HelloOpenGLES/app/src/main/java/com/example/Permission/: PermissionInterface.java
HelloOpenGLES/app/src/main/java/com/example/helloopengles/: MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java
HelloOpenGLES/app/src/main/res/values/: strings.xml
HelloOpenGLES/app/src/test/java/com/cgwang1580/helloopengles/: ExampleUnitTest.java
HelloOpenGLES/gradle/wrapper/: gradle-wrapper.properties
HelloTriangle/: .gitignore
HelloTriangle/app/: build.gradle
HelloTriangle/app/src/androidTest/java/com/example/helloopengles/: ExampleInstrumentedTest.java
HelloTriangle/app/src/androidTest/java/com/example/hellotriangle/: ExampleInstrumentedTest.java
HelloTriangle/app/src/main/: AndroidManifest.xml
HelloTriangle/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native.cpp  processor.cpp  processor.h  processor_inner.h
HelloTriangle/app/src/main/cpp/draw/: draw_utils.cpp  draw_utils.h  shader_content.h
HelloTriangle/app/src/main/cpp/header_out/: processor.h
HelloTriangle/app/src/main/cpp/libpng/: example.c
HelloTriangle/app/src/main/cpp/shader_helper/: Shader_Helper.cpp
HelloTriangle/app/src/main/cpp/source/: processor.cpp  processor_inner.h
HelloTriangle/app/src/main/cpp/utils/: MyDefine.h  MyDefineUtils.h  OpenImageHelper.h
HelloTriangle/app/src/main/java/com/example/Permission/: PermissionHelper.java
HelloTriangle/app/src/main/java/com/example/helloopengles/: MyLog.java
HelloTriangle/app/src/main/java/com/example/hellotriangle/: MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java  MyLog.java
HelloTriangle/app/src/main/java/com/example/utils/: CommonDefine.java  PermissionHelper.java  PermissionInterface.java
HelloTriangle/app/src/main/res/layout/: activity_main.xml
HelloTriangle/app/src/test/java/com/example/helloopengles/: ExampleUnitTest.java
OpenGLESCommon/common/: common.h
OpenGLESCommon/utils/: MyDefineUtils.h  MyFileHelper.h  OpenImageHelper.h
SeniorOpenGLES/app/: build.gradle
SeniorOpenGLES/app/src/androidTest/java/com/cgwang1580/senioropengles/: ExampleInstrumentedTest.java
SeniorOpenGLES/app/src/main/: AndroidManifest.xml
SeniorOpenGLES/app/src/main/cpp/: CMakeLists.txt  native.cpp
SeniorOpenGLES/app/src/main/cpp/draw/: AHardwareBufferHelper.cpp  AHardwareBufferHelper.h  DrawHelper.h  Mesh.h  Model.h  SampleBase.cpp  SampleBase.h  SampleDrawFBO.cpp  SampleDrawFBO.h  SampleRender3D.cpp  SampleRender3D.h  SampleRender3DMesh.cpp  SampleRender3DMesh.h  SampleTransform.cpp  SampleTransform.h  draw_utils.cpp  draw_utils.h
SeniorOpenGLES/app/src/main/cpp/hardwarebuffer/: GLUtils.cpp  HardwareBufferHelper.cpp  HardwareBufferHelper.h  HardwareBufferSample.cpp  LogUtils.h
SeniorOpenGLES/app/src/main/cpp/header_out/: processor.h
SeniorOpenGLES/app/src/main/cpp/model/: Mesh.h  Model.h
SeniorOpenGLES/app/src/main/cpp/render3d/: barHelper.h  sample_code.cc  sample_code.h  sample_code.hpp
SeniorOpenGLES/app/src/main/cpp/shader/: shader.txt  shader_content.h
SeniorOpenGLES/app/src/main/cpp/shader_helper/: ShaderHelper.cpp  ShaderHelper.h  Shader_Helper.cpp  Shader_Helper.h
SeniorOpenGLES/app/src/main/cpp/source/: JniUtils.h  processor.cpp  processor_inner.h
SeniorOpenGLES/app/src/main/java/com/cgwang1580/Permission/: PermissionHelper.java  PermissionInterface.java
SeniorOpenGLES/app/src/main/java/com/cgwang1580/multimotionhelper/: MotionStateGL.java  MultiMotionEventHelper.java
SeniorOpenGLES/app/src/main/java/com/cgwang1580/permission/: PermissionHelper.java
SeniorOpenGLES/app/src/main/java/com/cgwang1580/senioropengles/: MainActivity.java  MyGLRenderer.java  MyGLSurfaceView.java  MyLog.java
SeniorOpenGLES/app/src/main/res/values/: strings.xml
SeniorOpenGLES/app/src/test/java/com/cgwang1580/senioropengles/: ExampleUnitTest.java
